samples/_failures_safe/1761320922_66c905_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0461826d.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_0461826d.c:164:5: error: expected expression at end of input
  164 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_0461826d.c:164:5: error: expected declaration or statement at end of input
